--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "react-native-bouncy-checkbox": "^2.1.10",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-reanimated": "^2.4.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.1.2"
   },
   "devDependencies": {
