--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@react-navigation/stack": "^6.1.1",
     "expo": "^44.0.0",
     "react": "17.0.1",
+    "firebase": "8.2.3",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-bouncy-checkbox": "^2.1.10",
@@ -14,7 +15,8 @@
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "expo-updates": "~0.11.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
