--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-native-bouncy-checkbox": "^2.1.10",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.1.0",
-    "react-native-reanimated": "^2.4.1",
+    "react-native-reanimated": "~2.3.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
