--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
     "expo": "^44.0.0",
-    "react": "17.0.1",
+    "expo-updates": "~0.11.6",
     "firebase": "8.2.3",
+    "lottie-react-native": "^5.0.1",
+    "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-bouncy-checkbox": "^2.1.10",
@@ -15,8 +17,7 @@
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "redux": "^4.1.2",
-    "expo-updates": "~0.11.6"
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
